Add New-ScheduledTaskTrigger -RepetitionDuration property support

--- a/docs/samples/definitions/scheduledtasks/tasks.json.sample
+++ b/docs/samples/definitions/scheduledtasks/tasks.json.sample
@@ -56,6 +56,9 @@
           "Second": 0,
           "Minute": 0,
           "Hour": 12
+        },
+        "RepetitionDuration": {
+          "Days": 24855
         }
       }
     ],
