Revise sample and test task action arguments

--- a/docs/samples/definitions/scheduledtasks/tasks.json.sample
+++ b/docs/samples/definitions/scheduledtasks/tasks.json.sample
@@ -20,11 +20,11 @@
     "Action": [
       {
         "Execute": "powershell",
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.1 | % { New-Item R:\\$_ }\""
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.1 | % { New-Item $env:TEMP\\$_ }\""
       },
       {
         "Execute": "powershell",
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.2 | % { New-Item R:\\$_ }\""
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.2 | % { New-Item $env:TEMP\\$_ }\""
       }
     ],
     "Settings": {
@@ -62,11 +62,11 @@
     "Action": [
       {
         "Execute": "powershell",
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.1 | % { New-Item R:\\$_ }\""
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.1 | % { New-Item $env:TEMP\\$_ }\""
       },
       {
         "Execute": "powershell",
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.2 | % { New-Item R:\\$_ }\""
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.2 | % { New-Item $env:TEMP\\$_ }\""
       }
     ],
     "Settings": {
@@ -136,15 +136,15 @@
     "Action": [
       {
         "Execute": "powershell",
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.1 | % { New-Item R:\\$_ }\""
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.1 | % { New-Item $env:TEMP\\$_ }\""
       },
       {
         "Execute": "powershell",
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.2 | % { New-Item R:\\$_ }\""
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.2 | % { New-Item $env:TEMP\\$_ }\""
       },
       {
         "Execute": "powershell",
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.3 | % { New-Item R:\\$_ }\""
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"Get-Date -UFormat .%s.3 | % { New-Item $env:TEMP\\$_ }\""
       }
     ],
     "Settings": {
