--- a/docs/samples/definitions/scheduledtasks/tasks.sample.json
+++ b/docs/samples/definitions/scheduledtasks/tasks.sample.json
@@ -1,163 +1,163 @@
 [
   {
     "TaskName": "MyTaskName1",
-    "Action": [
-      {
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-1-1)\\\"\"",
-        "Execute": "powershell"
-      },
-      {
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-1-2)\\\"\"",
-        "Execute": "powershell"
-      }
-    ],
+    "TaskPath": "\\MyTaskFolder\\",
     "Trigger": [
       {
         "AtStartup": true
       },
       {
-        "At": {
-          "Year": 1999,
-          "Hour": 17,
-          "Minute": 30,
-          "Second": 0,
-          "Day": 30,
-          "Month": 11
-        },
+        "DaysInterval": 1,
         "Daily": true,
-        "DaysInterval": 1
-      }
-    ],
-    "Settings": {
-      "DontStopIfGoingOnBatteries": true,
-      "Disable": false,
-      "AllowStartIfOnBatteries": true
-    },
-    "Principal": {
-      "UserId": "myusername",
-      "LogonType": "S4U",
-      "RunLevel": "Highest"
-    },
-    "TaskPath": "\\MyTaskFolder\\"
-  },
-  {
-    "TaskName": "MyTaskName2",
-    "Action": [
-      {
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-2-1)\\\"\"",
-        "Execute": "powershell"
-      },
-      {
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-2-2)\\\"\"",
-        "Execute": "powershell"
-      }
-    ],
-    "Trigger": [
-      {
         "At": {
-          "Year": 1999,
-          "Hour": 14,
-          "Minute": 0,
-          "Second": 0,
           "Day": 30,
+          "Second": 0,
+          "Year": 1999,
+          "Minute": 30,
+          "Hour": 17,
           "Month": 11
-        },
-        "Once": true,
-        "RepetitionInterval": {
-          "Minute": 0,
-          "Hour": 12,
-          "Second": 0
         }
       }
     ],
-    "Settings": {
-      "DontStopIfGoingOnBatteries": true,
-      "Disable": false,
-      "AllowStartIfOnBatteries": true
-    },
+    "Action": [
+      {
+        "Execute": "powershell",
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-1-1)\\\"\""
+      },
+      {
+        "Execute": "powershell",
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-1-2)\\\"\""
+      }
+    ],
     "Principal": {
-      "UserId": "NT AUTHORITY\\SYSTEM",
       "LogonType": "S4U",
+      "UserId": "myusername",
+      "RunLevel": "Highest"
+    },
+    "Settings": {
+      "Disable": false,
+      "DontStopIfGoingOnBatteries": true,
+      "AllowStartIfOnBatteries": true
+    }
+  },
+  {
+    "TaskName": "MyTaskName2",
+    "TaskPath": "\\MyTaskFolder\\",
+    "Trigger": [
+      {
+        "Once": true,
+        "At": {
+          "Day": 30,
+          "Second": 0,
+          "Year": 1999,
+          "Minute": 0,
+          "Hour": 14,
+          "Month": 11
+        },
+        "RepetitionInterval": {
+          "Second": 0,
+          "Hour": 12,
+          "Minute": 0
+        }
+      }
+    ],
+    "Action": [
+      {
+        "Execute": "powershell",
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-2-1)\\\"\""
+      },
+      {
+        "Execute": "powershell",
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-2-2)\\\"\""
+      }
+    ],
+    "Principal": {
+      "LogonType": "S4U",
+      "UserId": "NT AUTHORITY\\SYSTEM",
       "RunLevel": "Limited"
     },
-    "TaskPath": "\\MyTaskFolder\\"
+    "Settings": {
+      "Disable": false,
+      "DontStopIfGoingOnBatteries": true,
+      "AllowStartIfOnBatteries": true
+    }
   },
   {
     "TaskName": "MyTaskName3",
-    "Action": [
-      {
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-3-1)\\\"\"",
-        "Execute": "powershell"
-      },
-      {
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-3-2)\\\"\"",
-        "Execute": "powershell"
-      },
-      {
-        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-3-3)\\\"\"",
-        "Execute": "powershell"
-      }
-    ],
+    "TaskPath": "\\MyTaskFolder\\",
     "Trigger": [
       {
+        "DaysInterval": 1,
+        "Daily": true,
         "At": {
+          "Day": 30,
+          "Second": 0,
           "Year": 1999,
+          "Minute": 0,
           "Hour": 10,
-          "Minute": 0,
-          "Second": 0,
-          "Day": 30,
           "Month": 11
-        },
-        "Daily": true,
-        "DaysInterval": 1
+        }
       },
       {
+        "DaysInterval": 1,
+        "Daily": true,
         "At": {
+          "Day": 30,
+          "Second": 0,
           "Year": 1999,
+          "Minute": 0,
           "Hour": 14,
-          "Minute": 0,
-          "Second": 0,
-          "Day": 30,
           "Month": 11
-        },
-        "Daily": true,
-        "DaysInterval": 1
+        }
       },
       {
+        "DaysInterval": 1,
+        "Daily": true,
         "At": {
+          "Day": 30,
+          "Second": 0,
           "Year": 1999,
+          "Minute": 0,
           "Hour": 18,
-          "Minute": 0,
-          "Second": 0,
-          "Day": 30,
           "Month": 11
-        },
-        "Daily": true,
-        "DaysInterval": 1
+        }
       },
       {
-        "At": {
-          "Year": 1999,
-          "Hour": 22,
-          "Minute": 0,
-          "Second": 0,
-          "Day": 30,
-          "Month": 11
-        },
+        "DaysInterval": 1,
         "Daily": true,
-        "DaysInterval": 1
+        "At": {
+          "Day": 30,
+          "Second": 0,
+          "Year": 1999,
+          "Minute": 0,
+          "Hour": 22,
+          "Month": 11
+        }
       }
     ],
-    "Settings": {
-      "DontStopIfGoingOnBatteries": true,
-      "Disable": false,
-      "AllowStartIfOnBatteries": true
-    },
+    "Action": [
+      {
+        "Execute": "powershell",
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-3-1)\\\"\""
+      },
+      {
+        "Execute": "powershell",
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-3-2)\\\"\""
+      },
+      {
+        "Execute": "powershell",
+        "Argument": "-NonInteractive -NoProfile -NoLogo -Command \"New-Item \\\"$env:TEMP\\$(Get-Date -UFormat .%s-3-3)\\\"\""
+      }
+    ],
     "Principal": {
-      "UserId": "myusername",
       "LogonType": "S4U",
+      "UserId": "myusername",
       "RunLevel": "Highest"
     },
-    "TaskPath": "\\MyTaskFolder\\"
+    "Settings": {
+      "Disable": false,
+      "DontStopIfGoingOnBatteries": true,
+      "AllowStartIfOnBatteries": true
+    }
   }
 ]
